# analise-exploratoria-scr

./: .gitignore  README.md  pyproject.toml  requirements.txt  scikit_analysis.ipynb  teste.md
exploratory_analysis/: README.md  analise_datasets.ipynb
predictive_models/: README.md  decision_tree.ipynb  knn.ipynb  logistic_regression.ipynb  preprocessing.py  random_forest.ipynb  resultados_lr.csv  svm.ipynb  xgboost.ipynb
preprocessing/: _cleaning.py  _feature_engineering.py  _load_data.py  _scenarios.py  _split.py  main_preprocessing.py  preprocessing.md
results/: README.md  analise_resultados.ipynb  experiments.csv  generate_summary.py  model_results.csv  model_results_limpo.csv  relatorio_performance.md  results.ipynb  results_2.ipynb  results_3.ipynb  summary_table.csv
system/: README.md  app.py  generate_mock_db.py  mock_members.json  train_model.py
system/static/: script.js  style.css
system/templates/: dashboard.html  index.html
tests/: README.md  noise_analysis.ipynb  noise_analysis.md
utils/: README.md  experiment_logger.py
