[project]
name = "analise_ds"
version = "0.1.0"
description = "Análise de Base SCR com Machine Learning (TCC)"
authors = [
    {name = "Milena Hamerski"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scikit-learn>=1.2.0",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "jinja2>=3.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
